Fix Accessibility Contrast Issue for Learn more Buttons (#4956)

--- a/website/src/css/showcase.scss
+++ b/website/src/css/showcase.scss
@@ -174,7 +174,7 @@ html[data-theme="dark"] {
   }
 
   .articleButton {
-    color: var(--ifm-color-emphasis-600);
+    color: var(--ifm-color-emphasis-700);
     font-weight: 500;
     font-size: 15px;
     padding: 6px 12px;
